# example-fastapi-app

./: Dockerfile  justfile  log_config.local.yaml  log_config.yaml  main.py  pyproject.toml
.github/workflows/: build-and-publish.yaml
